# ruim

./: Cargo.toml  rsa_private_key.pem  rsa_public_key.pem  todo.md
api-models/: Cargo.toml
api-models/src/: chat.rs  lib.rs  user.rs
crate/message-broker/: Cargo.toml
crate/message-broker/src/: lib.rs
crate/message_broker/: Cargo.toml
crate/message_broker/src/: lib.rs
ruim-client/: .env  Cargo.toml
ruim-client/src/: logging.rs  main.rs  term.rs
ruim-client/src/app/: key_events.rs  mod.rs
ruim-client/src/control/: mod.rs
ruim-client/src/ui/: mod.rs
ruim-client/src/ui/components/: input.rs  mod.rs  traits.rs
ruim-server/: Cargo.toml
ruim-server/migrations/: 20240310021203_create_user_table.sql  20240316194434_user_friend_message.sql
ruim-server/src/: app.rs  context.rs  jwt.rs  lib.rs  main.rs
ruim-server/src/core/: session_manager.rs
ruim-server/src/db/: chat.rs  mod.rs
ruim-server/src/db/user/: friendship.rs  mod.rs
ruim-server/src/handler/: chat.rs  mod.rs
ruim-server/src/handler/user/: friendship.rs  mod.rs
ruim-server/src/model/: message.rs  mod.rs  user.rs
ruim-server/src/service/: auth.rs
server-dev-util/: Cargo.toml
