[package]
name = "ruim-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["env"] }
api-models = { path = "../api-models"}
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.27.0"
tokio = "1.36.0"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
directories = "5.0.1"
