[package]
name = "message-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
chrono = "0.4.35"
dashmap = "5.5.3"
parking_lot = "0.12.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
